fix z-index

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1087,7 +1087,8 @@ html {
       font-family: "Circular";
       border-bottom-width: 50px;
       color: inherit;
-      position: relative; }
+      position: relative;
+      z-index: -1; }
       .cover-container .cover-wrapper .btn-contact a::after {
         content: "";
         position: absolute;
@@ -1100,7 +1101,8 @@ html {
       content: url("../../public/img/arrow-black.png");
       margin-left: 20px;
       position: relative;
-      top: 3px; }
+      top: 3px;
+      z-index: -1; }
 
 .why-onire-container {
   padding: 66px 0 138px;
